--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,4 +4,7 @@ j2ee.server.domain=C:/Users/Rodrigo/GlassFish_Server/glassfish/domains/domain1
 j2ee.server.home=C:/Users/Rodrigo/GlassFish_Server/glassfish
 j2ee.server.instance=[C:\\Users\\Rodrigo\\GlassFish_Server\\glassfish;C:\\Users\\Rodrigo\\GlassFish_Server\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
 j2ee.server.middleware=C:/Users/Rodrigo/GlassFish_Server
+javac.debug=true
+javadoc.preview=true
+selected.browser=default
 user.properties.file=C:\\Users\\Rodrigo\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
