--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -68,7 +68,7 @@ javadoc.private=false
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
-javadoc.windowtitle=
+javadoc.windowtitle=JavaDoc del Monopoly
 lib.dir=${web.docbase.dir}/WEB-INF/lib
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
